adapted index & contact

--- a/contact.html
+++ b/contact.html
@@ -106,6 +106,30 @@
 						<span>RU</span>
 					</div>
 				</div>
+
+				<div class="mobile-menu">
+					<input type="checkbox" id="menu-toggle" class="menu-toggle" />
+					<label for="menu-toggle" class="menu-button">
+						<img class="mobile_icon" src="./img/Decorative Menu.svg" alt="" />
+					</label>
+					<nav class="mobile_nav">
+						<ul>
+							<li><a href="./funding.html">Финансирование</a></li>
+							<li><a href="#">Консультация</a></li>
+							<li><a href="./training.html">Обучение</a></li>
+							<li><a href="#">Сопровождение</a></li>
+							<li><a href="./news.html">Новости</a></li>
+							<li><a href="#">Условия</a></li>
+							<li><a href="#">Проекты</a></li>
+							<li><a href="#">О фонде</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+						<div class="mobile_acsreq">
+							<a class="mobile_acs" href="#">Акселератор</a>
+							<a class="mobile_req" href="#">Подать заявку</a>
+						</div>
+					</nav>
+				</div>
 			</div>
 		</header>
 
@@ -163,7 +187,7 @@
 								</button>
 							</form>
 						</div>
-						<div>
+						<div class="contact_map">
 							<iframe
 								src="https://yandex.ru/map-widget/v1/?ll=45.699269%2C43.313332&mode=whatshere&whatshere%5Bpoint%5D=45.697676%2C43.315100&whatshere%5Bzoom%5D=17&z=15"
 							></iframe>
@@ -171,10 +195,10 @@
 						<div class="contact_info">
 							<h3>Информация о нас</h3>
 							<div class="contact_info_grid">
-									<address>
-										<span>Адрес: </span>364000, Чеченская Республика, г. Грозный, Проспект
-									А.А.Кадырова, дом 3/25, этаж 13, секции 3,4
-									</address>
+								<address>
+									<span>Адрес: </span>364000, Чеченская Республика, г. Грозный,
+									Проспект А.А.Кадырова, дом 3/25, этаж 13, секции 3,4
+								</address>
 								<div class="c_info_el">
 									<div class="info_el_img">
 										<img src="./img/contact/tel.png" alt="" />
@@ -200,15 +224,14 @@
 									<div class="info_worktime_text">
 										<p>
 											График работы: <br />
-											С понедельника по пятницу c <span>9:00 до 18:00</span> <br />
+											С понедельника по пятницу c <span>9:00 до 18:00</span>
+											<br />
 											Обед с <span>13:00 до 14:00</span>
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
-
-						<div class="contact_text"></div>
 					</div>
 				</div>
 			</section>
