--- a/news.html
+++ b/news.html
@@ -95,7 +95,7 @@
 						<li><a href="#">Условия</a></li>
 						<li><a href="#">Проекты</a></li>
 						<li><a href="#">О фонде</a></li>
-						<li><a href="#">Контакты</a></li>
+						<li><a href="./contact.html">Контакты</a></li>
 					</ul>
 				</nav>
 				<a class="head_acselerator" href="">Акселератор</a>
@@ -105,6 +105,30 @@
 						<img src="./img/ru.svg" alt="" />
 						<span>RU</span>
 					</div>
+				</div>
+
+				<div class="mobile-menu">
+					<input type="checkbox" id="menu-toggle" class="menu-toggle" />
+					<label for="menu-toggle" class="menu-button">
+						<img class="mobile_icon" src="./img/Decorative Menu.svg" alt="" />
+					</label>
+					<nav class="mobile_nav">
+						<ul>
+							<li><a href="./funding.html">Финансирование</a></li>
+							<li><a href="#">Консультация</a></li>
+							<li><a href="./training.html">Обучение</a></li>
+							<li><a href="#">Сопровождение</a></li>
+							<li><a href="./news.html">Новости</a></li>
+							<li><a href="#">Условия</a></li>
+							<li><a href="#">Проекты</a></li>
+							<li><a href="#">О фонде</a></li>
+							<li><a href="./contact.html">Контакты</a></li>
+						</ul>
+						<div class="mobile_acsreq">
+							<a class="mobile_acs" href="#">Акселератор</a>
+							<a class="mobile_req" href="#">Подать заявку</a>
+						</div>
+					</nav>
 				</div>
 			</div>
 		</header>
