--- a/funding.html
+++ b/funding.html
@@ -95,7 +95,7 @@
 						<li><a href="#">Условия</a></li>
 						<li><a href="#">Проекты</a></li>
 						<li><a href="#">О фонде</a></li>
-						<li><a href="#">Контакты</a></li>
+						<li><a href="./contact.html">Контакты</a></li>
 					</ul>
 				</nav>
 				<a class="head_acselerator" href="">Акселератор</a>
@@ -122,7 +122,7 @@
 							<li><a href="#">Условия</a></li>
 							<li><a href="#">Проекты</a></li>
 							<li><a href="#">О фонде</a></li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="./contact.html">Контакты</a></li>
 						</ul>
 						<div class="mobile_acsreq">
 							<a class="mobile_acs" href="#">Акселератор</a>
