--- a/index.html
+++ b/index.html
@@ -390,12 +390,14 @@
 					</div>
 					<div class="sel_bottom">
 						<div class="bottom_text">
-							<h3>Начните развивать свой бизнес прямо сейчас</h3>
+							<h3>Миссия фонда </h3>
 							<p>
-								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
-								egestas.
+								Миссия Фонда — создание благоприятных условий для
+								для достижения устойчивого социально-экономического развития в
+								Чеченской Республике путем предоставления финансовой поддержки
+								на создание новых и развитие уже действующих предприятий.
 							</p>
-							<a href="#">Зарегистрироваться</a>
+							<a href="#">Подать заявку</a>
 						</div>
 						<img src="./img/tel_dude.png" alt="" />
 					</div>
