added new pages

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 						<li><a href="#">Условия</a></li>
 						<li><a href="#">Проекты</a></li>
 						<li><a href="#">О фонде</a></li>
-						<li><a href="#">Контакты</a></li>
+						<li><a href="./contact.html">Контакты</a></li>
 					</ul>
 				</nav>
 				<a class="head_acselerator" href="">Акселератор</a>
@@ -122,7 +122,7 @@
 							<li><a href="#">Условия</a></li>
 							<li><a href="#">Проекты</a></li>
 							<li><a href="#">О фонде</a></li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="./contact.html">Контакты</a></li>
 						</ul>
 						<div class="mobile_acsreq">
 							<a class="mobile_acs" href="#">Акселератор</a>
@@ -134,107 +134,200 @@
 		</header>
 
 		<main>
-			<section id="contact">
-				<div class="wrapper">
-					<h2>Контакты</h2>
-					<div class="contact_grid">
-						<div class="contact_grid_form">
-							<h3>Напишите нам</h3>
-							<form name="sentMessage" id="contactForm" novalidate>
-								<input
-									type="text"
-									id="name"
-									placeholder="Ваше имя"
-									required
-									data-validation-required-message="Введите ваше имя."
-								/>
-								<input
-									type="tel"
-									data-format="+7 (ddd) ddd-dddd"
-									id="phone"
-									placeholder="Номер телефона"
-									required
-									data-validation-required-message="Введите ваш номер телефона."
-								/>
-								<input
-									type="email"
-									id="email"
-									placeholder="Email"
-									required
-									data-validation-required-message="Введите ваш электронный адрес."
-								/>
-								<textarea
-									id="message"
-									placeholder="Сообщение"
-									required
-									data-validation-required-message="Введите ваше сообщение"
-									maxlength="999"
-									rows="6"
-									style="resize: none"
-								></textarea>
-								<button id="btn" type="submit" class="lvl4__btn">
-									Отправить заявку
-									<svg
-										width="17"
-										height="17"
-										viewBox="0 0 17 17"
-										xmlns="http://www.w3.org/2000/svg"
-									>
-										<path
-											d="M16.5201 0.595588C16.0949 0.184079 15.4656 0.0318763 14.8789 0.192937L1.1968 3.93679C0.577744 4.09946 0.138964 4.56412 0.0207656 5.1536C-0.0999838 5.75436 0.321789 6.51779 0.872814 6.83669L5.15092 9.31058C5.58969 9.56505 6.15603 9.50143 6.51913 9.15676L11.418 4.51741C11.6646 4.27502 12.0727 4.27502 12.3193 4.51741C12.566 4.75015 12.566 5.12944 12.3193 5.37103L7.41199 10.0104C7.04804 10.3551 6.98001 10.8898 7.24787 11.3061L9.86184 15.3729C10.168 15.8553 10.6952 16.1299 11.2734 16.1299C11.3414 16.1299 11.418 16.1299 11.486 16.121C12.1493 16.0413 12.6765 15.6137 12.8721 15.0097L16.9282 2.14982C17.1068 1.60222 16.9452 1.00629 16.5201 0.595588Z"
-										/>
-									</svg>
-								</button>
-							</form>
+			<div class="wrapper">
+				<section id="aboutfund">
+					<h2>О Фонде</h2>
+					<div class="af_el af_fund">
+						<h3>Фонд имени Шейха Зайеда</h3>
+						<img src="img/about/logo_main.jpg" alt="" />
+						<p>
+							Фонд оказывает поддержку гражданам Российской Федерации в возрасте
+							от 18 до 60 лет, проживающим в Чеченской Республике, в создании и
+							развитии бизнеса, зарегистрированного и ведущего основную
+							деятельность на территории Чеченской Республики.
+						</p>
+						<p>
+							Основные направления поддержки включают предоставление
+							финансирования на создание нового и развитие действующего бизнеса,
+							обучение и консультирование предпринимателей, и содействие
+							развитию предпринимательского сообщества.
+						</p>
+						<p>
+							В течение 10 лет Фонд планирует профинансировать проекты на сумму
+							более 300 миллионов долларов США и способствовать созданию более
+							60 тыс. рабочих мест.
+						</p>
+						<p>
+							В организации своей работы Фонд полагается на бизнес-процессы и
+							методики, специально разработанные и опробованные специалистами
+							Фонда Халифа в Объединенных Арабских Эмиратах, и адаптированные
+							для условий Чеченской Республики совместными усилиями местных
+							экспертов и авторитетных международных консультантов.
+						</p>
+					</div>
+					<div class="af_el af_khalifa">
+						<h3>Фонд Халифа по поддержке предпринимательства</h3>
+						<img src="img/about/logo_khalifa.jpg" alt="" />
+						<p>
+							Фонд Халифа был создан Правительством эмирата Абу-Даби, ОАЭ в 2007
+							году для поддержки местных предприятий.
+						</p>
+						<p>
+							Цель Фонда – создать новое поколение местных предприятий за счет
+							стимулирования культуры предпринимательства среди местных жителей
+							посредством поддержки малых и средних предприятий в Объединенных
+							Арабских Эмиратах.
+						</p>
+						<p>
+							Для создания благоприятного инвестиционного климата и развития
+							потенциала предпринимателей Фонд разработал целую систему услуг
+							для бизнесменов. Эта система включает в себя обучение,
+							консультирование, информирование, административное сопровождение,
+							продвижение на рынке и финансирование предпринимателей.
+						</p>
+						<p>
+							В 2016 году по поручению наследного принца Абу-Даби, заместителя
+							Главнокомандующего Вооруженных Сил ОАЭ, Шейха Мухаммеда Бин Зайеда
+							Аль Нахайяна, Фонд Халифа инициировал работу по созданию в
+							Чеченской Республике филиала Фонда. Работы по созданию велись с
+							привлечением чеченских и международных экспертов, и включали в
+							себя исследование текущего состояния экосистемы поддержки
+							предпринимательства в регионе, определение проблемных мест и
+							разработку продуктов, наиболее полно отвечающих потребностям
+							местных жителей. Итогом этой работы стала полноценная стратегия
+							деятельности Фонда имени Шейха Зайеда на ближайшие десять лет,
+							цель которой – способствовать созданию и развитию около 3 000
+							предприятий, и обеспечению почти 70 000 новых рабочих мест.
+						</p>
+					</div>
+				</section>
+				<section id="greetings">
+					<h2>Приветствие Хасана Хакимова</h2>
+					<div class="af_el gt_khakimov">
+						<h3>Хасан Сулейманович Хакимов</h3>
+						<img src="img/about/khakimov.jpg" alt="" />
+						<p>
+							Стимулирование роли малого и среднего бизнеса в развитии экономики
+							Чеченской Республики является важнейшей задачей, стоящей перед
+							руководством нашего региона. Именно развитие малого и среднего
+							бизнеса способно обеспечить социально-экономическую стабильность в
+							Чеченской Республике на долгие годы.
+						</p>
+						<p>
+							Мы очень рады, что благодаря усилиям Главы Чеченской Республики,
+							Героя России Рамзана Ахматовича Кадырова, нам удалось привлечь к
+							решению этой задачи наших партнеров из ОАЭ и при участии Фонда
+							Халифа создать в Чеченской Республике Фонд имени Шейха Зайеда по
+							поддержке предпринимательства и инноваций.
+						</p>
+						<p>
+							Советом директоров Фонда, в состав которого входят четыре
+							представителя эмиратского Фонда Халифа, утверждена стратегия его
+							развития и определены направления деятельности на ближайшие пять
+							лет. Предлагаемые продукты финансирования учитывают потребности
+							местного бизнеса и позволяют предпринимателям получить
+							финансирование по сниженной процентной ставке в размере 11%
+							годовых, со льготным периодом до 12 месяцев и гибким требованиям к
+							залоговому обеспечению. Хотелось бы особо отметить, что Фонд
+							Зайеда станет одним из пионеров в сфере предоставления
+							предпринимателям Чеченской Республики доступа к исламским
+							финансовым продуктам по принципу партнерского участия.
+						</p>
+						<p>
+							Отдельного внимания заслуживает обучающая программа Фонда,
+							являющаяся неотъемлемой частью стратегии его деятельности. Для
+							предпринимателей будут организованы специальные курсы по всем
+							ключевым направлениям, необходимым для успешной организации и
+							ведения бизнеса.
+						</p>
+						<p>
+							В целом, мы уверены, что деятельность Фонда будет успешно
+							интегрирована в экосистему поддержки предпринимательской
+							деятельности в Чеченской Республике и позволит значительно
+							увеличить долю малых и средних частных предприятий в общем объеме
+							экономической деятельности региона.
+						</p>
+						<q
+							>Заместитель Председателя Правительства Чеченской Республики.
+							Председатель Совета Директоров ООО «Фонд имени Шейха Зайеда по
+							поддержке предпринимательства и инноваций»</q
+						>
+					</div>
+				</section>
+				<section id="ourteam">
+					<h2>Наша команда</h2>
+					<div class="ot_grid">
+						
+					</div>
+					<div class="af_el ot_nowais">
+						<h3>О нас</h3>
+						<img src="img/about/nowais.jpg" alt="" />
+						<p>
+							Необходимым условием плодотворной и успешной деятельности любой
+							организации является команда профессиональных сотрудников
+						</p>
+						<p>
+							Команда ООО «Фонд имени Шейха Зайеда» состоит из квалифицированных
+							специалистов, получивших образование в престижных ВУЗах мира,
+							таких как:
+							<span
+								>Middlebury College, SOAS University of London, Queen Mary
+								University of London, City University London, University of East
+								Anglia, Manchester Metropolitan University, Glasgow Caledonian
+								University, American University of Ras Al Khaimah, Bedfordshire
+								University и т.д.</span
+							>
+						</p>
+						<p>
+							Сотрудники Фонда прошли специальный двухнедельный курс подготовки
+							в головном офисе Фонда Халифа в Абу-Даби, ОАЭ, где ознакомились
+							как с операционными процессами, так и с практическими методами
+							работы.
+						</p>
+						<p>
+							В Фонде работают специалисты различных направлений, каждый из
+							которых преуспевает в своей профессиональной деятельности и ставит
+							своей целью содействовать развитию и продвижению бизнеса в
+							Чеченской Республике.
+						</p>
+						<q>Сотрудники Фонда имени Шейха Зайеда</q>
+					</div>
+					<div class="ot_grid">
+						<div class="af_el ot_grid_el">
+							<h4>Абдурахман Мударов</h4>
+							<p>Директор по развитию потенциала фонда имени Шейха Зайеда</p>
+							<img src="./img/about/mudarov.jpg" alt="" />
 						</div>
-						<div class="contact_map">
-							<iframe
-								src="https://yandex.ru/map-widget/v1/?ll=45.699269%2C43.313332&mode=whatshere&whatshere%5Bpoint%5D=45.697676%2C43.315100&whatshere%5Bzoom%5D=17&z=15"
-							></iframe>
+						<div class="af_el ot_grid_el">
+							<h4>Казаев Муса</h4>
+							<p>Заместитель генерального директора</p>
+							<img src="./img/about/khazaev.jpg" alt="" />
 						</div>
-						<div class="contact_info">
-							<h3>Информация о нас</h3>
-							<div class="contact_info_grid">
-								<address>
-									<span>Адрес: </span>364000, Чеченская Республика, г. Грозный,
-									Проспект А.А.Кадырова, дом 3/25, этаж 13, секции 3,4
-								</address>
-								<div class="c_info_el">
-									<div class="info_el_img">
-										<img src="./img/contact/tel.png" alt="" />
-									</div>
-									<a href="tel:+7 (8712) 29-10-10">+7 (8712) 29-10-10</a>
-								</div>
-								<div class="c_info_el">
-									<div class="info_el_img">
-										<img src="./img/contact/tel.png" alt="" />
-									</div>
-									<a href="tel:+7 (938) 998-33-33">+7 (938) 998-33-33</a>
-								</div>
-								<div class="c_info_el">
-									<div class="info_el_img">
-										<img src="./img/contact/mail.png" alt="" />
-									</div>
-									<a href="mailto:info@zayedfund.com">info@zayedfund.com</a>
-								</div>
-								<div class="c_info_el">
-									<div class="info_el_img">
-										<img src="./img/contact/work.png" alt="" />
-									</div>
-									<div class="info_worktime_text">
-										<p>
-											График работы: <br />
-											С понедельника по пятницу c <span>9:00 до 18:00</span>
-											<br />
-											Обед с <span>13:00 до 14:00</span>
-										</p>
-									</div>
-								</div>
-							</div>
+
+						<div class="af_el ot_grid_el">
+							<h4>Нагаев Шахрудди</h4>
+							<p>Директор кредитного департамента</p>
+							<img src="./img/about/nagaev.jpg" alt="" />
+						</div>
+
+						<div class="af_el ot_grid_el">
+							<h4>Ахмед Арсаев</h4>
+							<p>Финансовый директор</p>
+							<img src="./img/about/arsaev.jpg" alt="" />
+						</div>
+						<div class="af_el ot_grid_el">
+							<h4>Алхазур Тазбаев</h4>
+							<p>Шариатский эксперт</p>
+							<img src="./img/about/tazbaev.jpg" alt="" />
+						</div>
+						<div class="af_el ot_grid_el">
+							<h4>Беслан Висамбиев</h4>
+							<p>Директор Инновационного Департамента</p>
+							<img src="./img/about/visambiev.jpg" alt="" />
 						</div>
 					</div>
-				</div>
-			</section>
+				</section>
+			</div>
 		</main>
 
 		<footer>
