--- a/about.html
+++ b/about.html
@@ -202,6 +202,37 @@
 					</div>
 				</section>
 				<section id="greetings">
+					<h2>Генеральный директор Фонда имени Шейха Зайеда</h2>
+					<div class="af_el gt_khakimov">
+						<h3>Анвар Аюбович Усманов</h3>
+						<img src="img/about/Usmanov.jpg" alt="" />
+						<p>
+							Анвар Аюбович окончил международный подготовительный курс
+							Университета Кингс Колледж в Лондоне.
+						</p>
+						<br />
+						<p>
+							Успешно получил степень бакалавра по специальности «Управление
+							бизнесом» в Университете Центрального Ланкашира, один из
+							крупнейших университетов Великобритании находящийся в Лондоне.
+						</p>
+						<p>
+							Помимо чеченского и русского языка, в совершенстве владеет и
+							английским языком⁣⁣.
+						</p>
+						<br />
+						<p>
+							Работал руководителем аппарата вице-премьер-министра Правительства
+							Чеченской Республики.
+						</p>
+						<p>
+							В аппарате вице премьер-министра правительства ЧР выполнял
+							контроль за эффективностью деятельности государственных органов и
+							обеспечением контроля за расходованием бюджетных средств.
+						</p>
+					</div>
+				</section>
+				<section id="greetings">
 					<h2>Приветствие Хасана Хакимова</h2>
 					<div class="af_el gt_khakimov">
 						<h3>Хасан Сулейманович Хакимов</h3>
@@ -256,9 +287,7 @@
 				</section>
 				<section id="ourteam">
 					<h2>Наша команда</h2>
-					<div class="ot_grid">
-						
-					</div>
+					<div class="ot_grid"></div>
 					<div class="af_el ot_nowais">
 						<h3>О нас</h3>
 						<img src="img/about/nowais.jpg" alt="" />
@@ -294,36 +323,35 @@
 					</div>
 					<div class="ot_grid">
 						<div class="af_el ot_grid_el">
-							<h4>Абдурахман Мударов</h4>
-							<p>Директор по развитию потенциала фонда имени Шейха Зайеда</p>
-							<img src="./img/about/mudarov.jpg" alt="" />
-						</div>
-						<div class="af_el ot_grid_el">
 							<h4>Казаев Муса</h4>
 							<p>Заместитель генерального директора</p>
-							<img src="./img/about/khazaev.jpg" alt="" />
+							<img src="./img/about/khazaev2.PNG" alt="" />
 						</div>
-
 						<div class="af_el ot_grid_el">
 							<h4>Нагаев Шахрудди</h4>
 							<p>Директор кредитного департамента</p>
-							<img src="./img/about/nagaev.jpg" alt="" />
+							<img src="./img/about/nagaev2.PNG" alt="" />
+						</div>
+						<div class="af_el ot_grid_el">
+							<h4>Абдурахман Мударов</h4>
+							<p>Директор по развитию потенциала фонда имени Шейха Зайеда</p>
+							<img src="./img/about/mudarov2.PNG" alt="" />
 						</div>
 
 						<div class="af_el ot_grid_el">
 							<h4>Ахмед Арсаев</h4>
 							<p>Финансовый директор</p>
-							<img src="./img/about/arsaev.jpg" alt="" />
+							<img src="./img/about/arsaev2.PNG" alt="" />
 						</div>
 						<div class="af_el ot_grid_el">
 							<h4>Алхазур Тазбаев</h4>
 							<p>Шариатский эксперт</p>
-							<img src="./img/about/tazbaev.jpg" alt="" />
+							<img src="./img/about/tazbaev2.PNG" alt="" />
 						</div>
 						<div class="af_el ot_grid_el">
 							<h4>Беслан Висамбиев</h4>
 							<p>Директор Инновационного Департамента</p>
-							<img src="./img/about/visambiev.jpg" alt="" />
+							<img src="./img/about/visambiev2.jpg" alt="" />
 						</div>
 					</div>
 				</section>
