--- a/apply.html
+++ b/apply.html
@@ -141,7 +141,7 @@
 			</div>
 		</header>
 
-		<main>
+		<main id="apply">
 			<section id="edu_present">
 				<div class="wrapper">
 					<div class="present__text fund__main">
@@ -158,20 +158,12 @@
 							</div>
 						</form>
 					</div>
-					<img class="present_back" src="./img/funding/main_back.png" alt="" />
+					<img class="apply_back" src="./img/apply.png" alt="" />
 					<div class="present__info">
 						<div class="info__el">
 							<div class="el_icon_cont">
-								<svg
-									width="24"
-									height="24"
-									viewBox="0 0 24 24"
-									xmlns="http://www.w3.org/2000/svg"
-								>
-									<path
-										d="M18.0199 12.33L16.7999 11.11C16.5099 10.86 16.3399 10.49 16.3299 10.08C16.3099 9.63 16.4899 9.18 16.8199 8.85L18.0199 7.65C19.0599 6.61 19.4499 5.61 19.1199 4.82C18.7999 4.04 17.8099 3.61 16.3499 3.61H5.8999V2.75C5.8999 2.34 5.5599 2 5.1499 2C4.7399 2 4.3999 2.34 4.3999 2.75V21.25C4.3999 21.66 4.7399 22 5.1499 22C5.5599 22 5.8999 21.66 5.8999 21.25V16.37H16.3499C17.7899 16.37 18.7599 15.93 19.0899 15.14C19.4199 14.35 19.0399 13.36 18.0199 12.33Z"
-										fill="#be252a"
-									/>
+								<svg viewBox="0 0 24 24" width="24" height="24" fill="#396939">
+									<path d="M23,1v22h-7h-5H6H1v-7h5v-5h5V6h5V1H23z"></path>
 								</svg>
 							</div>
 							<div class="el__text">
@@ -181,36 +173,34 @@
 						</div>
 						<div class="info__el">
 							<div class="el_icon_cont">
-								<svg
-									width="25"
-									height="24"
-									viewBox="0 0 25 24"
-									xmlns="http://www.w3.org/2000/svg"
-								>
-									<path
-										d="M18.1965 7.77C18.1265 7.76 18.0565 7.76 17.9865 7.77C16.4365 7.72 15.2065 6.45 15.2065 4.89C15.2065 3.3 16.4965 2 18.0965 2C19.6865 2 20.9865 3.29 20.9865 4.89C20.9765 6.45 19.7465 7.72 18.1965 7.77Z"
+								<svg width="64px" height="64px" viewBox="0 0 72 72">
+									<polygon
+										fill="#396939"
+										points="17 12.007 16 48.007 35 64.007 35 24.007 17 12.007"
+									></polygon>
+									<polygon
 										fill="#be252a"
-									/>
+										points="55 12.007 56 48.007 37 64.007 37 24.007 55 12.007"
+									></polygon>
+
 									<path
-										d="M21.4566 14.6999C20.3366 15.4499 18.7666 15.7299 17.3166 15.5399C17.6966 14.7199 17.8966 13.8099 17.9066 12.8499C17.9066 11.8499 17.6866 10.8999 17.2666 10.0699C18.7466 9.86991 20.3166 10.1499 21.4466 10.8999C23.0266 11.9399 23.0266 13.6499 21.4566 14.6999Z"
-										fill="#be252a"
-									/>
-									<path
-										d="M7.10666 7.77C7.17666 7.76 7.24666 7.76 7.31666 7.77C8.86666 7.72 10.0967 6.45 10.0967 4.89C10.0967 3.29 8.80666 2 7.20666 2C5.61666 2 4.32666 3.29 4.32666 4.89C4.32666 6.45 5.55666 7.72 7.10666 7.77Z"
-										fill="#be252a"
-									/>
-									<path
-										d="M7.21662 12.8501C7.21662 13.8201 7.42662 14.7401 7.80662 15.5701C6.39662 15.7201 4.92662 15.4201 3.84662 14.7101C2.26662 13.6601 2.26662 11.9501 3.84662 10.9001C4.91662 10.1801 6.42662 9.8901 7.84662 10.0501C7.43662 10.8901 7.21662 11.8401 7.21662 12.8501Z"
-										fill="#be252a"
-									/>
-									<path
-										d="M12.7863 15.87C12.7063 15.86 12.6163 15.86 12.5263 15.87C10.6863 15.81 9.21631 14.3 9.21631 12.44C9.22631 10.54 10.7563 9 12.6663 9C14.5663 9 16.1063 10.54 16.1063 12.44C16.0963 14.3 14.6363 15.81 12.7863 15.87Z"
-										fill="#be252a"
-									/>
-									<path
-										d="M9.53631 17.9399C8.02631 18.9499 8.02631 20.6099 9.53631 21.6099C11.2563 22.7599 14.0763 22.7599 15.7963 21.6099C17.3063 20.5999 17.3063 18.9399 15.7963 17.9399C14.0863 16.7899 11.2663 16.7899 9.53631 17.9399Z"
-										fill="#be252a"
-									/>
+										fill="none"
+										stroke="#2fb14b"
+										stroke-linecap="round"
+										stroke-miterlimit="10"
+										stroke-width="2"
+										d="M17.6769,12.0972c-.9223-.6-1.6769-.19-1.6769.91v34a4.7349,4.7349,0,0,0,1.56,3.2518L34.3788,63.7555a2.6239,2.6239,0,0,0,3.1235.0047L54.4364,50.2543A4.7148,4.7148,0,0,0,56,47.0072v-34c0-1.1-.7546-1.5095-1.6769-.91l-16.6462,10.82a3.3519,3.3519,0,0,1-3.3538,0Z"
+									></path>
+									<line
+										x1="36"
+										x2="36"
+										y1="24.0072"
+										y2="64.0072"
+										stroke="#2fb14b"
+										stroke-linecap="round"
+										stroke-miterlimit="10"
+										stroke-width="2"
+									></line>
 								</svg>
 							</div>
 							<div class="el__text">
@@ -384,6 +374,170 @@
 							</div>
 							<span>2 личных фото </span>
 						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="selComittion">
+				<div class="wrapper">
+					<h2>2. Отборочная комиссия</h2>
+					<div class="fm_text">
+						<h3>
+							Заполненная Форма Регистрации вместе с кратким описанием
+							бизнес-идеи и сопровождающими документами рассматривается на
+							заседании Отборочной Комиссии Фонда. Основные критерии оценки
+							заявок Фондом включают:
+						</h3>
+						<ol>
+							<li>
+								Ваш уровень образования, профессиональный опыт и наличие
+								необходимых навыков для реализации бизнес-идеи;
+							</li>
+							<li>
+								Энтузиазм и количество времени, которое Вы готовы уделить своему
+								проекту;
+							</li>
+							<li>
+								Размер Вашего собственного вклада в предлагаемый к реализации
+								проект и Ваши текущие финансовые возможности;
+							</li>
+							<li>
+								Уровень квалификации работников, которые будут вовлечены в
+								реализацию Проекта;
+							</li>
+							<li>
+								Осуществимость бизнеса с точки зрения рыночных условий, спроса и
+								предложения;
+							</li>
+							<li>Месторасположение бизнеса;</li>
+							<li>
+								Иные факторы, влияющие на возможность успешной реализации
+								предлагаемого Вами бизнеса.
+							</li>
+						</ol>
+					</div>
+					<div class="fm_text sc_red">
+						<svg viewBox="0 0 512 512">
+							<path
+								class="st0"
+								d="M505.095,407.125L300.77,53.208c-9.206-15.944-26.361-25.849-44.774-25.849 c-18.412,0-35.552,9.905-44.751,25.849L6.905,407.109c-9.206,15.944-9.206,35.746,0,51.69 c9.206,15.944,26.354,25.842,44.758,25.842h408.674c18.405,0,35.568-9.897,44.759-25.842 C514.302,442.855,514.302,423.053,505.095,407.125z M256.004,426.437c-17.668,0-32.013-14.33-32.013-32.004 c0-17.668,14.345-31.997,32.013-31.997c17.667,0,31.997,14.329,31.997,31.997C288.001,412.108,273.671,426.437,256.004,426.437z M275.72,324.011c0,10.89-8.834,19.709-19.716,19.709c-10.898,0-19.717-8.818-19.717-19.709l-12.296-144.724 c0-17.676,14.345-32.005,32.013-32.005c17.667,0,31.997,14.33,31.997,32.005L275.72,324.011z"
+							></path>
+						</svg>
+						<p>
+							Обратите внимание, что при заполнении Формы Регистрации Вы
+							соглашаетесь с тем, что Фонд имени Шейха Зайеда имеет право
+							отклонить Вашу заявку по собственному усмотрению в любое время без
+							объяснения причин отказа. Предоставление заведомо ложной
+							информации на этапе подаче заявки может послужить причиной отказа
+							на последующих этапах рассмотрения Вашей заявки.
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<section id="educate">
+				<div class="wrapper">
+					<h2>3. Обучение</h2>
+					<div class="fm_text">
+						<p>
+							По итогам рассмотрения Вашей заявки Отборочной Комиссией Вам может
+							быть предложено пройти профильное обучение, предоставляемое Фондом
+							на бесплатной основе. В частности, возможные направления обучения
+							включают тренинг по генерации идей, предназначенный для
+							предпринимателей, чья бизнес-идея ещё не до конца проработана и
+							требует дополнительного уточнения, и тренинг по разработке
+							бизнес-плана.
+							<br />
+							<br />
+							Более подробная информация о предоставляемых видах обучения
+							приведена в соответствующем разделе - <a href="">Обучение</a>
+							<br />
+							<br />
+							По итогам тренингов проводится тестирование заявителей для оценки
+							успешности усвоения представленного материала.
+						</p>
+					</div>
+					<div class="fm_text sc_red">
+						<svg viewBox="0 0 512 512">
+							<path
+								class="st0"
+								d="M505.095,407.125L300.77,53.208c-9.206-15.944-26.361-25.849-44.774-25.849 c-18.412,0-35.552,9.905-44.751,25.849L6.905,407.109c-9.206,15.944-9.206,35.746,0,51.69 c9.206,15.944,26.354,25.842,44.758,25.842h408.674c18.405,0,35.568-9.897,44.759-25.842 C514.302,442.855,514.302,423.053,505.095,407.125z M256.004,426.437c-17.668,0-32.013-14.33-32.013-32.004 c0-17.668,14.345-31.997,32.013-31.997c17.667,0,31.997,14.329,31.997,31.997C288.001,412.108,273.671,426.437,256.004,426.437z M275.72,324.011c0,10.89-8.834,19.709-19.716,19.709c-10.898,0-19.717-8.818-19.717-19.709l-12.296-144.724 c0-17.676,14.345-32.005,32.013-32.005c17.667,0,31.997,14.33,31.997,32.005L275.72,324.011z"
+							></path>
+						</svg>
+						<p>
+							Обратите внимание, что непосещение тренингов и небрежное к ним
+							отношение может послужить причиной отказа от дальнейшего
+							рассмотрения Вашей заявки.
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<section id="businessPlan">
+				<div class="wrapper">
+					<h2>4. Разработка бизнес-плана</h2>
+					<div class="fm_text">
+						<p>
+							Заявителям, успешно прошедшим предшествующие этапы рассмотрения
+							заявки, включая обучение, если таковое было рекомендовано, будет
+							предложено подготовить бизнес-план Проекта по утвержденному Фондом
+							формату. В ходе подготовки бизнес-плана заявитель будет иметь
+							возможность посоветоваться с закрепленным за ним
+							бизнес-консультантом по поводу содержания бизнес-плана, уточнить
+							детали расчетов. В свою очередь, бизнес-консультанты могут давать
+							замечания по содержанию бизнес-плана и требовать уточнения и
+							подтверждения предположений, заложенных в бизнес-плане.
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<section id="defendBPlan">
+				<div class="wrapper">
+					<h2>5. Защита бизнес-плана</h2>
+					<div class="fm_text">
+						<p>
+							После успешной подготовки бизнес-плана и устранения всех замечаний
+							бизнес-консультантов, заявитель будет приглашен на заседание
+							Кредитного Комитета Фонда, где ему будет представлена возможность
+							защитить свой бизнес-план и ответить на вопросы экспертов. В
+							случае окончательного одобрения бизнес-плана по итогам заседания
+							Кредитного Комитета, с заявителем будет заключен договор займа.
+							<br />
+							<br />
+							Обратите внимание, что одобрение бизнес-плана может быть условным.
+							В случае условного одобрения заявителю будет предоставлено время
+							(до трех месяцев) на выполнение условий выдачи займа.
+						</p>
+						<br />
+						<h3>В число подобных условий могут входить такие как:</h3>
+						<ol>
+							<li>Регистрация юридического лица для реализации проекта;</li>
+							<li>
+								Обеспечение места реализации проекта и предоставление всех
+								необходимых подтверждающих документов на производственное
+								помещение;
+							</li>
+							<li>
+								Предоставление залогового имущества для обеспечения займа.
+							</li>
+						</ol>
+					</div>
+				</div>
+			</section>
+
+			<section id="approvement">
+				<div class="wrapper">
+					<h2>6. Перечисление заемных средств</h2>
+					<div class="fm_text">
+						<p>
+							Перечисление средств в рамках договора займа производится
+							поэтапно, в соответствии со статьями расходов, согласованными в
+							рамках бизнес-плана.
+							<br />
+							<br />
+							Перечисление происходит безналичным способом.
+						</p>
 					</div>
 				</div>
 			</section>
